# Project-Ninja-Code-Guard

./: .env.example  .gitignore  Dockerfile  PROJECT_PLAN.md  README.md  nixpacks.toml  pyproject.toml  render.yaml  requirements-dev.txt  requirements-prod.txt  requirements.txt  sentinel.yml.example
.github/workflows/: ci.yml  prewarm.yml
app/: config.py  main.py
app/agents/: base_agent.py  performance_agent.py  security_agent.py  style_agent.py  synthesizer.py
app/context/: embedder.py  indexer.py  retriever.py
app/db/: postgres.py  redis_cache.py
app/github/: auth.py  client.py  comment_formatter.py  webhook.py
app/models/: findings.py  webhook_payloads.py
app/services/: health_score.py
app/tools/: bandit_tool.py  detect_secrets_tool.py  linter_tool.py  radon_tool.py
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AgentBreakdown.tsx  AnimatedCounter.tsx  FindingsTable.tsx  HealthScoreRing.tsx  SeverityBadge.tsx  TrendChart.tsx  motion.tsx
dashboard/lib/: api.ts  types.ts
docs/: WEEK10_DEPLOYMENT_AND_LAUNCH.md  WEEK1_FOUNDATION_AND_SETUP.md  WEEK2_GITHUB_INTEGRATION.md  WEEK3_SECURITY_AGENT.md  WEEK4_PERFORMANCE_AGENT.md  WEEK5_STYLE_AGENT.md  WEEK6_RAG_AND_PARALLEL.md  WEEK7_SYNTHESIZER.md  WEEK8_DASHBOARD.md  WEEK9_POLISH_AND_EVALUATION.md
prompts/: performance_system.md  security_system.md  style_system.md
tests/: conftest.py
tests/eval/: metrics.py  run_eval.py
tests/unit/: test_findings_schema.py  test_parallel_agents.py  test_performance_agent.py  (+6 more)
(+3 files in other folders)
